--- a/proj.ipynb
+++ b/proj.ipynb
@@ -1206,16 +1206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'cnd.ocr.dataset' from '/Users/alex/Python/Mag1/Tips-Tricks/project/cnd/ocr/dataset.py'>"
+       "<module 'cnd.ocr.dataset' from '/Users/alex/PycharmProjects/tips-tricks-project/cnd/ocr/dataset.py'>"
       ]
      },
-     "execution_count": 589,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,42 +1228,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "cnd.ocr.dataset.OcrDataset"
-      ]
-     },
-     "execution_count": 590,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-de000c605fed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOcrDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'data'"
+     ]
     }
    ],
    "source": [
-    "dataset.OcrDataset"
+    "dataset.OcrDataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "cnd.ocr.dataset.OcrDataset"
-      ]
-     },
-     "execution_count": 581,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'OcrDataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c6f60cae5964>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mOcrDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'OcrDataset' is not defined"
+     ]
     }
    ],
    "source": [
-    "OcrDataset"
+    "OcrDataset()"
    ]
   },
   {
