--- a/check.ipynb
+++ b/check.ipynb
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "pic, label = ocr.getitem(random_ind)\n",
+    "pic, label = ocr.getitem(random_ind) # __getitem__ переименовать в getitem\n",
     "plt.imshow(pic, cmap='gray')\n",
     "print('Path:', filepaths[random_ind])\n",
     "print('Label:', label)\n",
@@ -163,42 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17% (1085 of 6120) |###                 | Elapsed Time: 0:00:06 ETA:   0:01:06"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/alex/PycharmProjects/tips-tricks-project/CropNumbers/NumBase/E999HK 2640.bmp\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 64% (3943 of 6120) |############        | Elapsed Time: 0:00:26 ETA:   0:00:17"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/alex/PycharmProjects/tips-tricks-project/CropNumbers/NumBase/E999HK 264.bmp\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100% (6120 of 6120) |####################| Elapsed Time: 0:00:37 Time:  0:00:37\n"
+      "100% (6120 of 6120) |####################| Elapsed Time: 0:00:33 Time:  0:00:33\n"
      ]
     }
    ],
